--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ejercicios Javascript</title>
   </head>
   <body>
-    <h1 id="encabezado">Solicitar 3 números (entre el 1 y el 100) y definir cual es el mayor </h1>
+    <h1 id="encabezado">Elaborar un algoritmo para leer 3 números y determinar sí uno es la suma de los otros dos </h1>
     <form>
       <div class="row">
         <div class="col">
